--- a/TCG_Nexus/app/src/main/res/values/strings.xml
+++ b/TCG_Nexus/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="play">Play</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
+    <string name="login">Log In</string>
 </resources>
